<resources>
    <string name="app_name">vac_project</string>
    <string name="email">Email</string>
    <string name="hello">안녕하세요</string>
    <string name="ac_have">계정이 있으신가요?</string>
    <string name="login">로그인하기</string>
    <string name="join">회원가입</string>
    <string name="google">구글 계정으로 가입</string>
    <string name="password">Password</string>
    <string name="zihologin">Log in</string>
    <string name="zihosignup">Sign up</string>
    <string name="remember_login">Remember login</string>
    <string name="_00_00">00:00</string>
    <string name="todo">오늘의 할 일</string>
    <string name="ts">터치잠금</string>
    <string name="main_content">Main Content</string>
    <string name="the_awesome_sliding_up_panel">The Awesome Sliding Up Panel</string>
    <string name="heeeel">hello</string>
    <string name="asdadasdasdasd">asdadasdasdasd</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>