<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.example.vac_project.Login" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/simple_margin"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@id/passwordInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/simple_margin"
            android:layout_marginBottom="100dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/signupButton"
            android:text="@string/zihologin"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintEnd_toEndOf="@id/passwordInput"
            app:layout_constraintStart_toEndOf="@id/signupButton"
            android:layout_marginStart="@dimen/simple_margin"
            android:layout_marginTop="32dp"
            />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zihosignup"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintStart_toStartOf="@id/passwordInput"
            app:layout_constraintEnd_toStartOf="@id/loginButton"
            android:layout_marginTop="32dp"


            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signupButton"
            app:layout_constraintStart_toStartOf="@id/passwordInput"
            app:layout_constraintEnd_toEndOf="@id/passwordInput"
            android:layout_margin="32dp"
            android:text="@string/remember_login"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>