<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
       <variable
            name="activity"
            type="com.example.vac_project.activity.foregroundMain.SignUp" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".`MainActivity.kt`">

        <TextView
            android:id="@+id/hello"
            android:text="@string/hello"
            android:fontFamily="@font/nanumsquare_aceb"
            android:textSize="36sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="164dp"/>

        <TextView
            android:id="@+id/beforLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_have"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="501dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/purple_500"
            android:background="#00ff0000"
            app:layout_constraintTop_toBottomOf="@id/beforLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:layout_width="244dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:text="@string/google_sign_up"
            app:isDarkTheme="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>